nginx/external-name-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-external
  namespace: default
spec:
  type: ExternalName
  externalName: my-keycloak-headless.keycloak.svc.cluster.local
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: minio-external
  namespace: default
spec:
  type: ExternalName
  externalName: myminio-tenant-console.minio-tenant.svc.cluster.local
  ports:
  - protocol: TCP
    port: 9443
    targetPort: 9443
