nginx/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio-tenant
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: local.xyz
    http:
      paths:
      - path: /minio
        pathType: Prefix
        backend:
          service:
            name: myminio-tenant-console
            port:
              number: 9443
